# advent-of-code-2024

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
.github/workflows/: orchestrator.yaml
advent_of_code_2024/day1/: solver.py
advent_of_code_2024/day2/: solver.py
advent_of_code_2024/day3/: solver.py
advent_of_code_2024/utils/: input_handling.py
day1/: solve.py
day2/: solve.py
day3/: solve.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_utils.py
