[project]
name = "advent-of-code-2024"
version = "0.0.1"
authors = [
  { name="James Lawlor", email="jameslawlor1987@gmail.com" },
]
description = "Code for Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/jameslawlor/advent-of-code-2024"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88
target-version = ['py39']