[project]
name = "advent-of-code-2024"
version = "0.1.0"
authors = [
  { name="James Lawlor", email="jameslawlor1987@gmail.com" },
]
description = "Code for Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = ["advent_of_code_2024"]

[project.urls]
Homepage = "https://github.com/jameslawlor/advent-of-code-2024"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["advent_of_code_2024"]

[tool.pytest.ini_options]
pythonpath = "advent_of_code_2024"
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88
target-version = ['py312']